--- a/数据结构/图/图的存储结构.md
+++ b/数据结构/图/图的存储结构.md
@@ -1,1 +1,11 @@
+## 邻接矩阵
 ![image](https://github.com/user-attachments/assets/d21a0954-4afe-4cd5-848c-adcf84767f74)
+## 邻接表
+![image](https://github.com/user-attachments/assets/27e1e48b-58e6-45cd-adb8-155de34d9c8f)
+![image](https://github.com/user-attachments/assets/27d1093b-4eec-4fcc-870e-603a1c50d840)
+## 十字链表
+![image](https://github.com/user-attachments/assets/4f4fa70f-8650-4025-8c99-2db96785952a)
+![image](https://github.com/user-attachments/assets/1d59191d-6cb3-4f88-9867-17d6734ebc4a)
+## 邻接多重表
+![image](https://github.com/user-attachments/assets/5843fb75-f225-44a6-8ae0-6f7bbe53341f)
+![image](https://github.com/user-attachments/assets/10d98fe2-32a1-436e-8921-e6c942342d0b)
