--- a/数据结构/图/各个图的问题算法.md
+++ b/数据结构/图/各个图的问题算法.md
@@ -12,3 +12,12 @@
 ![image](https://github.com/user-attachments/assets/40d1c59a-cc55-45b9-b75a-d7741511409d)
 # 最短路径
 ## BFS
+![image](https://github.com/user-attachments/assets/d14cb440-a11a-4bd9-bfa7-0ed7370b7a81)
+## Dijkstra算法
+![image](https://github.com/user-attachments/assets/27527c03-87ae-4bc0-994f-5de3d23f742d)
+
+不理解可以去网站[Dijkstra可视化](https://www.cs.usfca.edu/~galles/visualization/Dijkstra.html)
+## Floyd算法
+![image](https://github.com/user-attachments/assets/eec8282c-67f8-4bbb-868e-534982f7eead)
+
+不理解去网站[Floyd可视化](https://www.cs.usfca.edu/~galles/visualization/Floyd.html)
