--- a/数据结构/图/各个图的问题算法.md
+++ b/数据结构/图/各个图的问题算法.md
@@ -21,3 +21,17 @@
 ![image](https://github.com/user-attachments/assets/eec8282c-67f8-4bbb-868e-534982f7eead)
 
 不理解去网站[Floyd可视化](https://www.cs.usfca.edu/~galles/visualization/Floyd.html)
+
+# 关键路径
+## AOV、AOE网
+![image](https://github.com/user-attachments/assets/e8a2c0d6-f902-4a66-b4ca-0908250e8f8d)
+![image](https://github.com/user-attachments/assets/d9dbc0ad-0799-461a-91eb-b8b17bc5bc7d)
+
+## 拓扑排序
+![image](https://github.com/user-attachments/assets/1a7259aa-dbf0-42ce-b90f-c90be8a77d48)
+
+## 求关键路径
+1、计算各顶点的最早开始时间（ES）：从起始顶点开始，逐步计算每个顶点的最早可能开始时间。对于一个顶点，它的 ES 等于其所有前驱顶点的 ES 加上从前驱顶点到该顶点的边的权重的最大值。
+2、计算各顶点的最晚开始时间（LS）：从结束顶点开始倒推，结束顶点的 LS 等于其 ES。对于其他顶点，其 LS 等于其后继顶点的 LS 减去从该顶点到后继顶点的边的权重的最小值。
+3、确定关键活动：关键活动是指那些 ES 等于 LS 的活动，这些活动所在的边构成关键路径。
+![image](https://github.com/user-attachments/assets/792eefdd-344b-4130-9002-c9393dd58777)
