--- a/数据结构/查找/红黑树调整.md
+++ b/数据结构/查找/红黑树调整.md
@@ -1,5 +1,8 @@
 # 红黑树调整
-<mark>将结点初始设为红色</mark>
+<mark>
+将结点初始设为红色; 保证修复操作前和修复操作后的黑色结点的数量不变
+</mark>
+
 ## 1. 如果插入的结点是根节点，将颜色改为黑色
 ![image](https://github.com/user-attachments/assets/d769a1c2-1e2f-4a5a-b05b-a6309a76ea47)
 
