--- a/计算机组成原理/计算机系统.md
+++ b/计算机组成原理/计算机系统.md
@@ -1,3 +1,5 @@
 # 计算机硬件
 ## 冯诺依曼结构模型机
 ![image](https://github.com/user-attachments/assets/086d5718-c41e-4e0b-a0a7-d3a18919f71e)
+![冯诺依曼结构模型机](https://github.com/user-attachments/assets/17db1047-f4dc-46ca-9b9c-ee211bf4d2ff)
+![冯诺依曼结构](https://github.com/user-attachments/assets/4af9580b-a62d-4a85-854c-2a733d97fba8)
