--- a/计算机组成原理/计算机系统.md
+++ b/计算机组成原理/计算机系统.md
@@ -6,4 +6,16 @@
 
 
 ## 一位加法全加器
+A、B表示输入，C表示进位，S表示本位和，什么是本位和？就是这一位的和，比如1+1，结果为10，那么本位和为0.
 <img src="https://github.com/user-attachments/assets/12c13a13-6ddc-459a-81b2-1a84951d79a7" width="40%" />
+## 串行进位加法器
+每次根据低位的进位和输入来得到输出
+![nfa](https://github.com/user-attachments/assets/e9bf4fec-59f5-4f49-97f7-4c257ca6535e)
+## 并行进位加法器
+串行进位每次计算必须要有低位的进位，计算就会慢了，所以我们使用并行进位，每一个C都可以化为A、B和C0的表达式，如下
+然而并行太多表达式越来越复杂，电路设计也会更复杂，所以一般就并行四位
+![CLA](https://github.com/user-attachments/assets/7ea1efc6-f9cb-48d9-bac5-06896e5e8470)
+## 带标志加法器
+![jfq](https://github.com/user-attachments/assets/f6a2c7e5-bc9a-432a-b3fe-935e13841fe1)
+## ALU
+![ALU](https://github.com/user-attachments/assets/1cde057a-c536-43f9-be70-0abba4ee4a4d)
