--- a/计算机组成原理/数据的运算.md
+++ b/计算机组成原理/数据的运算.md
@@ -18,3 +18,5 @@
 ![原码除法](https://github.com/user-attachments/assets/53c569cd-a5b4-424c-89e9-da74d4534e01)
 补码除法（加减交替法）
 ![补码除法](https://github.com/user-attachments/assets/6c516c45-f7f5-4cc4-8640-96c4d2ff8555)
+### 除法电路
+![除法电路](https://github.com/user-attachments/assets/297432e6-1c6f-485d-9582-2f2caa22e973)
