--- a/计算机组成原理/存储系统.md
+++ b/计算机组成原理/存储系统.md
@@ -1,4 +1,23 @@
 # 存储系统
+## 芯片
+RAM和ROM都是半导体存储器，RAM为随机存取存储器，ROM为只读存储器
+### SRAM
+静态随机存取存储器<br>
+运用双稳态触发器存储数据，数据一旦被写入，只要不断电，数据就保持不变<br>
+速度非常快，但是每个单元需要更多晶体管，所以成本高，集成度低并且还占用更多空间。<br>
+一般用于高速缓存存储器。
+### DRAM
+动态随机存取存储器<br>
+运用电容存储数据，电容回自然放电，所以需要定时刷新来保持数据的完整性<br>
+速度比SRAM慢，每个存储元一般只用一个晶体管，密度比SRAM高很多，成本低，集成度高，容量大，功耗低<br>
+一般用于大容量主存系统。<br>
+DRAM的刷新
++ 集中刷新，在一个刷新周期内选择一段时间，这段时间叫做死期，依次对存储器所有行进行再生，这段时间不能读写存储器
++ 分散刷新，把每行的刷新分散到各个周期，对于存取周期1us，前一半周期0.5us用于读写，后一半0.5us用于刷新，没有死区但是增加了存取周期
++ 异步刷新，刷新周期除以行数，得到时间间隔t，每隔时间t产生一次刷新请求
+### ROM
+只读存储器
+
 ## 主存储器
 ### 主存储器整体结构
 存储体
@@ -28,13 +47,6 @@ CPU的MDR直接将数据与存储体交互
 根据体号查到模块，再根据地址查到数据地址。<br>
 由于相邻地址在不同的模块，所以CPU可以不需要等待读取完第一个地址的数据再去读第二个地址的数据，这个时候可以读取完第一条数据后芯片休息时间读取第二条数据<br>
 ![低位交叉编址](https://github.com/user-attachments/assets/ea6bd8ac-c30f-4815-a227-5b53bf158014)
-
-### SRAM
-
-### DRAM
-
-### ROM
-
 
 ### 位扩展
 例如：8Kx1位芯片扩展成8Kx8位就需要8片，这个时候地址线A0~A7和片选信号CS还有写使能WE都连接在同一位置，数据线则分别连向CPU
