--- a/计算机组成原理/高级程序语言与机器级代码之间的对应.md
+++ b/计算机组成原理/高级程序语言与机器级代码之间的对应.md
@@ -10,4 +10,14 @@
 |   | EDI | 变址寄存器 |
 |   | EBP | 堆栈基指针 |
 |   | ESP | 堆栈顶指针 |
-### 编译语言（X86）
+### 编译常用指令（X86）
+|  指令   | 用处  | 例子 |
+|  ----  | ----  | ----  |
+| mov  | 将第二个操作数复制到第一个操作数 | mov \<reg\>,\<reg\> |
+| push  | 将操作数压入操作栈，用于函数调用 | push eax|
+| pop  | 出栈,将ESP出栈并加4 | pop edi |
+| add/sub  | add加法，sub减法 | add \<reg\>,\<reg\> sub \<reg\>,\<reg\> |
+| inc/dec  | 自加1/自减1 | inc \<reg\>/dec \<reg\> |
+| imul  |  | 变址寄存器 |
+|   | EBP | 堆栈基指针 |
+|   | ESP | 堆栈顶指针 |
