--- a/计算机组成原理/高级程序语言与机器级代码之间的对应.md
+++ b/计算机组成原理/高级程序语言与机器级代码之间的对应.md
@@ -18,6 +18,6 @@
 | pop  | 出栈,将ESP出栈并加4 | pop edi |
 | add/sub  | add加法，sub减法 | add \<reg\>,\<reg\> sub \<reg\>,\<reg\> |
 | inc/dec  | 自加1/自减1 | inc \<reg\>/dec \<reg\> |
-| imul  |  | 变址寄存器 |
+| imul  | 带符号整数乘法.<br>两个操作数，结果保存到保存到第一个操作数中.<br> 三个操作数，结果保存到第三个操作数| imul eax,var / imul esi,edi,25 |
 |   | EBP | 堆栈基指针 |
 |   | ESP | 堆栈顶指针 |
