--- a/计算机组成原理/高级程序语言与机器级代码之间的对应.md
+++ b/计算机组成原理/高级程序语言与机器级代码之间的对应.md
@@ -11,13 +11,24 @@
 |   | EBP | 堆栈基指针 |
 |   | ESP | 堆栈顶指针 |
 ### 编译常用指令（X86）
+\<reg\>表示任意寄存器<br>
+\<mem\>表示内存地址<br>
+\<con\>表示常数<br>
 |  指令   | 用处  | 例子 |
 |  ----  | ----  | ----  |
-| mov  | 将第二个操作数复制到第一个操作数 | mov \<reg\>,\<reg\> |
+| mov  | 将第二个操作数复制到第一个操作数 | mov \<reg\>,\<reg\> , mov \<reg\>,\<mem\>|
 | push  | 将操作数压入操作栈，用于函数调用 | push eax|
 | pop  | 出栈,将ESP出栈并加4 | pop edi |
 | add/sub  | add加法，sub减法 | add \<reg\>,\<reg\> sub \<reg\>,\<reg\> |
 | inc/dec  | 自加1/自减1 | inc \<reg\>/dec \<reg\> |
 | imul  | 带符号整数乘法.<br>两个操作数，结果保存到保存到第一个操作数中.<br> 三个操作数，结果保存到第三个操作数| imul eax,var / imul esi,edi,25 |
-|   | EBP | 堆栈基指针 |
-|   | ESP | 堆栈顶指针 |
+| idiv  | 带符号整数除法，只有一个操作数，是除数，被除数是EAX与EDX的内容 | idiv \<reg32\> |
+| and/or/xor | 逻辑与，逻辑或，逻辑异或 | and/or/xor \<reg\>,\<reg\> |
+| not | 位翻转，操作数中每一位1->0/0->1 | not \<reg\> |
+| neg | 取负指令 | neg \<reg\> |
+| shl/shr | 逻辑移位，shl左移，shr右移，第一个操作数表示被操作数，第二个表示需要移动的位数 | shl \<reg\>,\<con\> |
+| jmp | 指令IP转移到指定的地址 | jmp \<label\> |
+| jcondition | 条件左移，根据condition条件左移 | jcondition \<label\> |
+| cmp/test | cmp比较两个数，test对两个数进行逐位与运算,与jcondition搭配使用 | cmp \<reg\>,\<reg\> |
+| call/ret | 对子程序的调用及返回 | call \<label\><br>ret |
+> jcondition有以下几类：<br>je \<label\> , 如果相等跳转到label.<br>jne \<label\> , 如果不相等跳转到label.<br>jz \<label\> , 如果为0跳转到label.<br>jg \<label\> , 第一个操作数大于第二个操作数，跳转到label.<br>jge \<label\> , 第一个操作数大于等于第二个操作数，跳转到label.<br>jl \<label\> , 第一个操作数小于第二个操作数，跳转到label.<br>jle \<label\> , 第一个操作数小于等于第二个操作数，跳转到label。 
